--- a/raylib-cmake-template-master/CMakeLists.txt
+++ b/raylib-cmake-template-master/CMakeLists.txt
@@ -24,7 +24,7 @@ set(PROJECT_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/sources/") # Define PROJECT_INCLU
 
 # Declaring our executable
 add_executable(${PROJECT_NAME})
-target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES} "sources/GameObject.cpp" "sources/RectangleRenderer.h" "sources/RectangleCollider.h" "sources/PlayerController.h" "sources/ColliderColorChanger.h")
+target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES} "sources/GameObject/GameObject.cpp" "sources/ComponentPool/ComponentPool.h"  "sources/GameObject/GameObject.h" "sources/ComponentPool/Component.cpp" "sources/ComponentPool/ComponentPoolType.h" "sources/ComponentPool/ComponentPoolType.cpp" )
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDE})
 target_link_libraries(${PROJECT_NAME} PRIVATE raylib)
 
