Worked on GameObject Editing UI
Added pop-up for editing gameobject

--- a/Level Editor/Level Editor/imgui.ini
+++ b/Level Editor/Level Editor/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=85,74
 Size=400,400
 
 [Window][Hello!]
@@ -11,6 +11,10 @@ Pos=556,46
 Size=225,325
 
 [Window][Editor]
-Pos=575,32
-Size=177,163
+Pos=590,42
+Size=193,413
+
+[Window][Object Editor]
+Pos=87,64
+Size=305,238
 
